[gd_scene load_steps=9 format=2]

[ext_resource path="res://HitBoxes/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/pillarguy.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Stats.gd" type="Script" id=4]
[ext_resource path="res://Effects/FlashWhite.shader" type="Shader" id=5]
[ext_resource path="res://Effects/BlinkAnimationPlayer.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.12634
height = 11.6641

[node name="PillarGuy" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 6 )]

[node name="Stats" type="Node" parent="."]
script = ExtResource( 4 )
max_health = 10
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
